Changes
=======

Version 1.0.0 (xx yyy zzzz)
---------------------------

- Make into a normal python package.

- Set up as a buildout for development.

- Made compatible with Zope 2.12+, at the expense of no longer being
  compatible with anything earlier.

- Converted documentation to Sphinx docs.

Version 0.7.2
-------------

 BREAKING CHANGES:

 - We now REQUIRE Zope 2.7 or later.
   Does not work with 2.6 anymore.
   *Probably* works with 2.7 but if you have problems, 2.8 is
   recommended.

 Features added:

 - A ZSyncer instance now has a config option to delete talkback
   comments when objects are received. Defaults to off.
   Not thoroughly tested!

 Bugs fixed:

 - Hopefully fixed sf bug #1469129: plone calls an action's condition
   expression before checking its permission expression, so, anonymous 
   couldn't browse the site.

 - Fixed sf bug #1352783: icons disappeared when virtual hosting.

 - Tests for acquisition bugs, seem to be fixed now.

 Refactoring:

 - Removed use of zLOG, we now use the python logging module instead.
   (requires Zope 2.7)

 - Started using absolute_url_path(). (requires Zope 2.7)


Version 0.7.1 (2005/04/10)
--------------------------

 Bugs fixed:

 - No more warning about "ambiguous name for method" on startup.

Version 0.7.1-beta1 (2005/12/22)
--------------------------------

 Bugs fixed:

 - Output message colorization was not working in the ZMI UI.

 - Simplified handling of output messages to use HTTP 1.1 chunking
   instead of guesstimating the size of output to write. This gives
   considerably simpler code.

   Doesn't seem to stream behind Apache / mod_rewrite, but neither did
   the old version. But at least you get all the output at once when
   it's done.

 - Improved breadcrumbs in ZMI UI: We now include the syncer root
   object as a clickable link. (It was there before, but not
   always visible.)

Version 0.7.0-final (2005/12/15)
--------------------------------

 Features added:
