@@ -28,7 +28,7 @@ interpreter = py
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = Products.ZSyncer
+eggs = Products.ZSyncer[test]
 
 [docs]
 recipe = zc.recipe.egg
